Algumas correções e adaptações

--- a/01-elementos-pre-textuais/lista-siglas.tex
+++ b/01-elementos-pre-textuais/lista-siglas.tex
@@ -5,7 +5,11 @@
 \begin{siglas}
 	\item[CEFET-MG] Centro Federal de Educação Tecnológica de Minas Gerais
     \item[DECOM] Departamento de Computação
+    \item[IDE] \emph{Integrated Development Environment}
+    \item[NBC] Next Byte Codes
+    \item[NXC] Not eXactly C 
 	\item[P] Controlador Proporcional
 	\item[PI] Controlador Proporcional Integral	
 	\item[PID] Controlador Proporcional Integral Derivativo
+	\item[VANT] Veículo Aéreo Não Tripulado
 \end{siglas}
