--- a/01-elementos-pre-textuais/preambulo.tex
+++ b/01-elementos-pre-textuais/preambulo.tex
@@ -8,7 +8,7 @@
 %\subtitulo{Subtítulo do trabalho}
 \autor{Mariana Athayde Garcia}
 \local{Belo Horizonte}
-\data{Março de 2015}
+\data{Julho de 2015}
 \instituicao{Centro Federal de Educação Tecnológica de Minas Gerais}
 \departamento{Departamento de Computação}
 \programa{Curso de Engenharia de Computação}
