--- a/02-elementos-textuais/conclusao.tex
+++ b/02-elementos-textuais/conclusao.tex
@@ -7,3 +7,5 @@
 
 Após realizados os testes, pode-se concluir  que os \emph{encoders} são suficientemente precisos, até então, para serem utilizados como ferramenta de medição e alimentador do sistema. Entretanto, devem ser realizados mais experimentos afim de aprimorar mais os ganhos do controlador para que possa-se assim ter uma maior segurança quando forem realizados os testes na malha 2, que no momento, apresenta-se em fase de implementação e testes. 
 
+Na segunda etapa deste trabalho serão realizados mais estudos a respeito das possibilidades de estruturação da rede do \emph{Lego Mindstorms\textregistered} e será realizada sua implementação afim de se concluir com o objetivo deste trabalho.
+
