--- a/02-elementos-textuais/metodologia.tex
+++ b/02-elementos-textuais/metodologia.tex
@@ -15,7 +15,7 @@ Posteriormente, serão realizadas simulações, através da ferramenta \emph{MAT
 
 \section{Fundamentação Teórica}
 
-Será feito nesse capítulo, um levantamento das diversas estratégias de controle de formação, e das diversas formas de se planejar a rede. Será analisada a viabilidade de implementação dessas estratégias na plataforma \emph{Lego Mindstorms\textregistered}, visto que trata-se de uma ferramenta de baixo custo usada para fins didáticos, por isso, apresenta muitas limitações.
+Será feito nesta etapa, um levantamento das diversas estratégias de controle de formação, e das diversas formas de se planejar a rede. Será analisada a viabilidade de implementação dessas estratégias na plataforma \emph{Lego Mindstorms\textregistered}, visto que trata-se de uma ferramenta de baixo custo usada para fins didáticos, por isso, apresenta muitas limitações.
 
 Além disso, apresenta-se no mesmo, outros conceitos que acredita-se essencial para a inserção do leitor no entendimento do texto, tais como: o que é um modelo matemático não holonômico, o que é controle de formação e faz-se um pequeno levantamento de \emph{softwares} disponíveis para implementação do modelo pretendido. 
 
